--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/compression": "^1.7.5",
 		"@types/cors": "^2.8.17",
 		"@types/express": "^4.17.21",
+		"@types/lodash": "^4.17.4",
 		"@types/mongoose": "^5.11.97",
 		"dotenv": "^16.4.5",
 		"nodemon": "^3.1.0",
@@ -28,6 +29,8 @@
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
 		"express": "^4.19.2",
+		"loadash": "^1.0.0",
+		"lodash": "^4.17.21",
 		"mongoose": "^8.3.2",
 		"mongose": "0.0.2-security"
 	}
